--- a/login.html
+++ b/login.html
@@ -5,22 +5,27 @@
 	<meta http-equiv='X-UA-Compatible' content='IE=edge'>
 	<title>Page Title</title>
 	<meta name='viewport' content='width=device-width, initial-scale=1'>
-	<link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+	<link rel='stylesheet' type='text/css' media='screen' href='login.css'>
+  <link rel='stylesheet' type='text/css' media='screen' href='login_anim.css'>
 	<script src='login.js'></script>
 </head>
 <body>
+  <div class="myLogin_form">
 	<form name="myLogin" id = "myLogin">
 		<fieldset>
-			<legend>Login</legend>
+			<p id="login_tag">Login</p>
 			Username: 
 			<input type="text" name="username" id="username" required>
 			<br>
 			Password: 
 			<input type="password" name="password" required>
 			<br>
-			<input type="submit" value="Login">
-			<input type="reset" value="Clear">
+      <div class="group_button">
+			<input type="submit" value="Login" id="login_button">
+			<input type="reset" value="Clear" id="clear_button">
+      </div>
 		</fieldset>
 	</form>
+</div>
 </body>
 </html>
