--- a/register.html
+++ b/register.html
@@ -5,28 +5,35 @@
 	<meta http-equiv='X-UA-Compatible' content='IE=edge'>
 	<title>Page Title</title>
 	<meta name='viewport' content='width=device-width, initial-scale=1'>
-	<link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+	<link rel='stylesheet' type='text/css' media='screen' href='register.css'>
+  <link rel='stylesheet' type='text/css' media='screen' href='register_anim.css'>
 	<script src='newreigister.js'></script>
 </head>
 <body>
+  <img src="" alt="">
+<div class="register_form">
 	<form name="myForm" id="myForm" action="login.html">
 		<fieldset>
-			<legend>Register</legend>
-			<span>* require</span> <br>
+			<p id="register_tag">REGISTRATION FORM</p>
+			<!-- <span>* require</span> <br> -->
 			<span id="errormsg"></span> <br>
 			First name*: 
 			<input type="text" name="firstname" required>
 			Last name*: 
 			<input type="text" name="lastname" >
 			<br>
+      <div class="genderbox">
 			Gender*: 
 			<input type="radio" name="gender" value="male" >Male
 			<input type="radio" name="gender" value="female" >Female
 			<input type="radio" name="gender" value="female" >Other
 			<br>
+      </div>
+      <div class="birthdaybox">
 			Birthday*: 
 			<input type="date" name="bday" value="" >
 			<br>
+      </div>
 			Email address*: 
 			<input type="email" name="email" >
 			<br>
@@ -39,9 +46,12 @@
 			Retype Password*: 
 			<input type="password" name="Retype" required >
 			<br>
-			<input type="submit" value="Register">
-			<input type="reset" value="Reset">
+      <div class="group_button">
+			<input type="submit" value="Register" id="submit_button">
+			<input type="reset" value="Reset" id="reset_button">
+      </div>
 		</fieldset>
 	</form>
+</div>
 </body>
 </html>
